// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Permissions no permissions with second middleware 1`] = `
"{
  \\"serviceName\\": \\"service\\",
  \\"controllerName\\": \\"no_permissions_second_middleware\\",
  \\"methods\\": {
    \\"get\\": {
      \\"/route\\": {
        \\"permissions\\": \\"(No permissions required)\\"
      }
    }
  }
}"
`;

exports[`Permissions require scope with single rag and two ors with single arg 1`] = `
"{
  \\"serviceName\\": \\"service\\",
  \\"controllerName\\": \\"require_scope_with_single_rag_and_two_ors_with_single_arg\\",
  \\"methods\\": {
    \\"get\\": {
      \\"/route\\": {
        \\"permissions\\": \\"(over here 2) + (here) + (permission)\\"
      }
    }
  }
}"
`;

exports[`Permissions requireScope with array arg 1`] = `
"{
  \\"serviceName\\": \\"service\\",
  \\"controllerName\\": \\"require_scope_with_array_arg\\",
  \\"methods\\": {
    \\"get\\": {
      \\"/route\\": {
        \\"permissions\\": \\"(permission && permission2)\\"
      }
    }
  }
}"
`;

exports[`Permissions requireScope with array arg and 'or' with array arg 1`] = `
"{
  \\"serviceName\\": \\"service\\",
  \\"controllerName\\": \\"require_scope_with_array_arg_and_or_with_array_arg\\",
  \\"methods\\": {
    \\"get\\": {
      \\"/route\\": {
        \\"permissions\\": \\"(here && here2) + (permission && permissions1)\\"
      }
    }
  }
}"
`;

exports[`Permissions requireScope with single arg 1`] = `
"{
  \\"serviceName\\": \\"service\\",
  \\"controllerName\\": \\"require_scope_with_single_arg\\",
  \\"methods\\": {
    \\"get\\": {
      \\"/route\\": {
        \\"permissions\\": \\"(permission)\\"
      }
    }
  }
}"
`;

exports[`Permissions requireScope with single arg and 'or' with array arg 1`] = `
"{
  \\"serviceName\\": \\"service\\",
  \\"controllerName\\": \\"require_scope_with_single_arg_and_or_with_array_arg\\",
  \\"methods\\": {
    \\"get\\": {
      \\"/route\\": {
        \\"permissions\\": \\"(here && here2) + (permission)\\"
      }
    }
  }
}"
`;

exports[`Permissions requireScope with single arg and 'or' with single arg 1`] = `
"{
  \\"serviceName\\": \\"service\\",
  \\"controllerName\\": \\"require_scope_with_single_arg_and_or_with_single_arg\\",
  \\"methods\\": {
    \\"get\\": {
      \\"/route\\": {
        \\"permissions\\": \\"(here) + (permission)\\"
      }
    }
  }
}"
`;

exports[`Permissions route with no permissions required 1`] = `
"{
  \\"serviceName\\": \\"service\\",
  \\"controllerName\\": \\"no_permissions_required\\",
  \\"methods\\": {
    \\"get\\": {
      \\"/route\\": {
        \\"permissions\\": \\"(No permissions required)\\"
      }
    }
  }
}"
`;

exports[`Permissions test all request methods 1`] = `
"{
  \\"serviceName\\": \\"service\\",
  \\"controllerName\\": \\"test_all_request_methods\\",
  \\"methods\\": {
    \\"get\\": {
      \\"/route\\": {
        \\"permissions\\": \\"(permission)\\"
      }
    },
    \\"head\\": {
      \\"/route\\": {
        \\"permissions\\": \\"(permission)\\"
      }
    },
    \\"post\\": {
      \\"/route\\": {
        \\"permissions\\": \\"(permission)\\"
      }
    },
    \\"put\\": {
      \\"/route\\": {
        \\"permissions\\": \\"(permission)\\"
      }
    },
    \\"delete\\": {
      \\"/route\\": {
        \\"permissions\\": \\"(permission)\\"
      }
    },
    \\"connect\\": {
      \\"/route\\": {
        \\"permissions\\": \\"(permission)\\"
      }
    },
    \\"options\\": {
      \\"/route\\": {
        \\"permissions\\": \\"(permission)\\"
      }
    },
    \\"trace\\": {
      \\"/route\\": {
        \\"permissions\\": \\"(permission)\\"
      }
    },
    \\"patch\\": {
      \\"/route\\": {
        \\"permissions\\": \\"(permission)\\"
      }
    }
  }
}"
`;
